--- a/index.html
+++ b/index.html
@@ -1,11 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Age Calculator</title>
+    <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    
+    <div class="container">
+        <img src="./public/img/group.png" alt="group" >
+        <div class="calculator">
+        <h1>Age <span class="change-color">calculator</span></h1>
+          <div class="input-box">
+            <input type="date" id="date">
+            <button onclick="calculateAge()" class="btn">Calculate</button>
+        </div>
+        <p id="result"></p>
+    </div>
+    </div>
+    <script src="script.js"></script>
 </body>
+
 </html>
